<resources>
    <string name="app_name">Expense Manager</string>
    <string name="network_connected">Network connected</string>
    <string name="network_disconnected">Network disconnected</string>
    <string name="email_not_null">Email mus not be null</string>
    <string name="email_invalidate">Email invalidate</string>
    <string name="password_not_null">Password must not be null</string>
    <string name="password_to_short">Password must be greater than or equal to 6</string>
    <string name="email_password_null">Please input full email and password</string>
    <string name="email_already_used">The email address is already in use by another account</string>
    <string name="login_successful">Login successful</string>
    <string name="check_email_password">Please check email or password</string>
    <string name="prepare">Prepare</string>
    <string name="provide">Provide</string>
    <string name="check_data_from_input">Please check data from input</string>
    <string name="please_provide_full_data">Please provide full data</string>
    <string name="please_provide_valid_date_plan">Request time is more than 1 day</string>
    <string name="please_select_wallet">Please select wallet</string>
    <string name="please_select_wallet_before">Please select wallet before</string>
    <string name="amount_to_large">The amount is too large</string>
    <string name="something_error">Something error, please try again later</string>
    <string name="name_not_null">Don\'t name to empty</string>
    <string name="name_to_short">Don\'t name to short</string>
    <string name="name_to_long">Don\'t name to long</string>
    <string name="name_cannot_digits">Name cannot is digits</string>
    <string name="name_cannot_character">Name cannot is special character</string>
    <string name="balance_not_null">Don\'t balance not null</string>
    <string name="balance_cannot_character">Balance cannot is special character</string>
    <string name="do_not_enter_old_money">Balance cannot is special character</string>
    <string name="please_enter_amount">Please enter amount value</string>
    <string name="update_transaction_success">Update transaction successful</string>
    <string name="update_balance_wallet_success">Update wallet balance successful</string>
    <string name="update_balance_failed">Update balance failed</string>
    <string name="delete_transaction_success">Delete transaction successful</string>
    <string name="delete_transaction_failed">Delete transaction failed</string>
    <string name="create_wallet_success">Create wallet successful</string>
    <string name="update_wallet_success">Update wallet successful</string>
    <string name="update_wallet_failed">Update wallet failed</string>
    <string name="delete_wallet_success">Delete wallet successful</string>
    <string name="delete_wallet_failed">Delete wallet failed</string>
    <string name="request_select_wallet_update">Please select the wallet you want to update!</string>
    <string name="request_select_wallet_delete">Please select the wallet you want to delete!</string>
    <string name="request_select_plan_update">Please select the plan you want to update!</string>
    <string name="request_select_plan_delete">Please select the plan you want to delete!</string>
    <string name="please_enter_balance">Please enter balance</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="transaction_count_number">Transactions count</string>
    <string name="update_avatar_success">Update avatar successful</string>
    <string name="update_avatar_failed">Update avatar failed</string>
    <string name="update_name_success">Update name successful</string>
    <string name="update_name_failed">Update name failed</string>
    <string name="update_email_success">Update email successful</string>
    <string name="update_email_failed">Update email failed</string>
    <string name="update_password_success">Update password successful</string>
    <string name="update_password_failed">Update password failed</string>
    <string name="request_re_login">You need to login again before updating</string>
    <string name="thank_for_feedback">Thank you for feedback</string>
    <string name="create_transaction_success">Create transaction successful</string>
    <string name="create_transaction_failed">Create transaction failed</string>
    <string name="create_plan_success">Create plan success</string>
    <string name="create_plan_failed">Create plan failed</string>
    <string name="permission_denied">This feature required a permission that the user has denied</string>
    <string name="select_picture">Select picture</string>
    <string name="on_developing">This feature is in development</string>
    <string name="for_premium">This feature is for premium</string>
    <string name="image_login_top">Image Login Top</string>
    <string name="image_login_center_end">Image Login Center End</string>
    <string name="login_welcome_sign_in">Hi \nPlease login</string>
    <string name="login_welcome_sign_up">Hi \nPlease Register</string>
    <string name="email">Email</string>
    <string name="enter_here">Enter here</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="to_sign_up">Don\'t Have Account? Signup</string>
    <string name="to_sign_in">Do you already have an account? Signin</string>
    <string name="wallet">Wallet</string>
    <string name="bag">Bag</string>
    <string name="budget">Budget</string>
    <string name="add_note">Add Note</string>
    <string name="other">Other</string>
    <string name="report">Report</string>
    <string name="add">Add</string>
    <string name="user_name">User name</string>
    <string name="user_email">mruser@gmail.com</string>
    <string name="expenditure_plan">Expenditure Plan</string>
    <string name="save_money">Save Money</string>
    <string name="debt_book">Debt Book</string>
    <string name="money" translatable="false">1.000.000 $</string>
    <string name="settings">Settings</string>
    <string name="security_policy">Security Policy</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="name">Name</string>
    <string name="wallet_name">Wallet name</string>
    <string name="please_wait">Please wait…</string>
    <string name="logout">Logout</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert!</string>
    <string name="do_you_really_want_logout">Do you really want logout?</string>
    <string name="do_you_want_really_logout">Do you want really logout?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_picture">Change Picture</string>
    <string name="update">Update</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="update_premium">Update Premium</string>
    <string name="button_back">Button Back</string>
    <string name="button_security">Button Security</string>
    <string name="normal">Normal</string>
    <string name="premium">Premium</string>
    <string name="update_name">Update Name</string>
    <string name="update_email">Update Email</string>
    <string name="update_password">Update Password</string>
    <string name="please_enter_your_new_name">Please enter your new name</string>
    <string name="please_enter_your_new_email">Please enter your new email</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="email_type">email@gmail.com</string>
    <string name="no_thanks">No, thanks</string>
    <string name="security">Security</string>
    <string name="please_re_login">Please login before changing your</string>
    <string name="transaction">Transaction</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="debt">Debt</string>
    <string name="needful">Needful</string>
    <string name="bill">Bill</string>
    <string name="eat">Eat</string>
    <string name="move">Move</string>
    <string name="house">House</string>
    <string name="utility">Utility</string>
    <string name="shopping">Shopping</string>
    <string name="enjoy">Enjoy</string>
    <string name="entertainment">Entertainment</string>
    <string name="outfit">Outfit</string>
    <string name="travel">Travel</string>
    <string name="beautify">Beautify</string>
    <string name="party">Party</string>
    <string name="offering">Offering</string>
    <string name="gift">Gift</string>
    <string name="charity">Charity</string>
    <string name="health">Health</string>
    <string name="doctor">Doctor</string>
    <string name="sport">Sport</string>
    <string name="child">Child</string>
    <string name="drop">Drop</string>
    <string name="fees">Fees</string>
    <string name="insurance">Insurance</string>
    <string name="salary">Salary</string>
    <string name="bonus">Bonus</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="pay">Pay</string>
    <string name="dues">Dues</string>
    <string name="repayment">Repayment</string>
    <string name="debt_collection">Debt Collection</string>
    <string name="borrow">Borrow</string>
    <string name="lend">Lend</string>
    <string name="select_a_wallet">Select a wallet</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="person">Person</string>
    <string name="time">Time</string>
    <string name="description">Description</string>
    <string name="show_more">Show More</string>
    <string name="event">Events</string>
    <string name="optimization">Optimization</string>
    <string name="save">Save</string>
    <string name="_100" translatable="false">$ 100.000</string>
    <string name="_100_00" translatable="false">100.000.000</string>
    <string name="_0" translatable="false">0</string>
    <string name="balance">Balance</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="currency">Currency</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="usd">USD</string>
    <string name="vnd">VND</string>
    <string name="upgrade">Upgrade</string>
    <string name="dollar">$</string>
    <string name="about">About</string>
    <string name="next">Next</string>
    <string name="tag">Tag</string>
    <string name="tips">Tips</string>
    <string name="more">More</string>
    <string name="img_wallet">Image Wallet</string>
    <string name="current_version">Version: 1.1.1.1</string>
    <string name="founder">Founder:</string>
    <string name="author_name">Dinh Tien Duong</string>
    <string name="thank_user">\tThank you for your interest and using our application. We always strive to improve and provide the best experience for users. With a personal and financial perspective, our application will help you manage your finances more intelligently and efficiently.\n\n\tWe believe that personal finance is one of the most important topics for everyone\'s life. Therefore, we have tried to incorporate the necessary knowledge, experience, and tools into the application to help you manage your finances most effectively.\n\n\tTo help us improve the application, we would greatly appreciate your contributions. Let us know your opinions, feedback, and suggestions. We will always listen and try to meet the needs of users.\n\n\tOnce again, thank you for trusting and using our application. We wish you all the success and happiness in life.</string>
    <string name="copyright">Copyright © 2023 Tien Duong</string>
</resources>