<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:text="@string/create_wallet"
            android:textAlignment="center"
            android:textColor="@color/primaryDarkColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_gray_corner_top_5"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:paddingHorizontal="16dp"
                android:text="@string/currency"
                android:textSize="17sp" />

            <RadioGroup
                android:id="@+id/radio_group_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:checkedButton="@id/radio_btn_usd"
                android:gravity="end"
                android:orientation="horizontal"
                android:paddingHorizontal="16dp">

                <RadioButton
                    android:id="@+id/radio_btn_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/usd" />

                <RadioButton
                    android:id="@+id/radio_btn_vnd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vnd" />
            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#858484" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/balance">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_orange_corner_16"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>