<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_tag"
            android:contentDescription="@string/tag"/>

        <LinearLayout
            android:id="@+id/item_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_white_corner_5"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="2.8"
                android:text="@string/event"
                android:textSize="16sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.2"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_next"
                android:contentDescription="@string/next"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_tips"
            android:contentDescription="@string/tips"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_white_corner_5"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="2.5"
                android:text="@string/optimization"
                android:textSize="16sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_optimization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                android:checked="false"
                android:src="@drawable/ic_next" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_show_more"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_gravity="center">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_keyboard_arrow_down_gray"
            android:contentDescription="@string/more"/>

        <TextView
            android:id="@+id/tv_show_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/show_more"
            android:textAlignment="center"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>